[gd_scene load_steps=8 format=2]

[ext_resource path="res://MapUIs/InsideSystem/closeupStar.png" type="Texture" id=1]
[ext_resource path="res://MapUIs/InsideSystem/EnterButton.gd" type="Script" id=2]
[ext_resource path="res://UIResources/InfoPanel.png" type="Texture" id=3]
[ext_resource path="res://UIResources/EnterButton.png" type="Texture" id=4]
[ext_resource path="res://UIResources/UIFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://UIResources/EnterFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://MapUIs/InsideSystem/bookmark.svg" type="Texture" id=7]

[node name="PlanetInfoHolder" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Holder" type="TextureRect" parent="Control"]
margin_right = 237.0
margin_bottom = 224.0

[node name="Background" type="TextureRect" parent="Control/Holder"]
visible = false
margin_left = -31.0
margin_top = -4.0
margin_right = 1057.0
margin_bottom = 1119.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Background2" type="NinePatchRect" parent="Control/Holder"]
margin_left = -31.0
margin_top = -4.0
margin_right = 763.0
margin_bottom = 1219.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
patch_margin_top = 200
patch_margin_right = 188
patch_margin_bottom = 599

[node name="PlanetImage" type="TextureRect" parent="Control/Holder"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 40.0
margin_right = 32.0
margin_bottom = 104.0
texture = ExtResource( 1 )
expand = true

[node name="PlanetName" type="Label" parent="Control/Holder"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_top = 119.0
margin_right = 110.0
margin_bottom = 139.0
custom_fonts/font = ExtResource( 5 )
text = "Proxima Centauri a"
align = 1
valign = 1

[node name="BiomeType" type="Label" parent="Control/Holder"]
margin_left = 10.0
margin_top = 144.0
margin_right = 229.0
margin_bottom = 167.0
custom_fonts/font = ExtResource( 5 )
text = "Biome: Volcanic"
align = 1
valign = 1

[node name="OrbTypes" type="Label" parent="Control/Holder"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_top = 169.0
margin_right = 110.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 5 )
text = "Orbs: Green/Red"
align = 1
valign = 1
autowrap = true

[node name="EnterButton" type="TextureButton" parent="Control/Holder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.5
margin_top = 132.0
margin_right = 351.5
margin_bottom = 339.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )
expand = true
script = ExtResource( 2 )

[node name="EnterLabel" type="Label" parent="Control/Holder/EnterButton"]
margin_left = 100.0
margin_top = 10.0
margin_right = 313.0
margin_bottom = 217.0
custom_fonts/font = ExtResource( 6 )
text = "Entrance Available"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="BookmarkButton" type="TextureButton" parent="Control/Holder"]
margin_left = 57.0
margin_top = 244.0
margin_right = 180.9
margin_bottom = 306.1
rect_min_size = Vector2( 123.9, 62.1 )
texture_normal = ExtResource( 7 )
expand = true

[node name="BLabel" type="Label" parent="Control/Holder/BookmarkButton"]
margin_left = 1.0
margin_right = 407.0
margin_bottom = 207.0
rect_min_size = Vector2( 406, 207 )
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = ExtResource( 6 )
text = "Bookmark star"
align = 1
valign = 1
autowrap = true
uppercase = true

[connection signal="mouse_entered" from="Control/Holder/EnterButton" to="Control/Holder/EnterButton" method="_on_EnterButton_mouse_entered"]
[connection signal="mouse_exited" from="Control/Holder/EnterButton" to="Control/Holder/EnterButton" method="_on_EnterButton_mouse_exited"]
[connection signal="pressed" from="Control/Holder/EnterButton" to="Control/Holder/EnterButton" method="_on_EnterButton_pressed"]
[connection signal="scene_switch" from="Control/Holder/EnterButton" to="Control/Holder/EnterButton" method="_on_EnterButton_scene_switch"]
[connection signal="mouse_entered" from="Control/Holder/BookmarkButton" to="Control/Holder/EnterButton" method="_on_BookmarkButton_mouse_entered"]
[connection signal="mouse_exited" from="Control/Holder/BookmarkButton" to="Control/Holder/EnterButton" method="_on_BookmarkButton_mouse_exited"]
[connection signal="pressed" from="Control/Holder/BookmarkButton" to="Control/Holder/EnterButton" method="_on_BookmarkButton_pressed"]
